Don't use URLs in maps.